--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,71 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>InteractiveMap</title>
+    <base href="" />
 
-<head>
-  <meta charset="utf-8">
-  <title>InteractiveMap</title>
-  <base href="">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="assets/img/icon-16.png" />
+    <style>
+      @font-face {
+        font-family: Scorecard-Averta;
+        font-style: normal;
+        font-weight: 400;
+        src: url(assets/fonts/averta-regular.woff2) format("woff2");
+      }
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/img/icon-16.png">
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1976d2">
-</head>
+      @font-face {
+        font-family: Scorecard-Averta;
+        font-style: normal;
+        font-weight: 700;
+        src: url(assets/fonts/averta-bold.woff2) format("woff2");
+      }
 
-<body>
-  <app-root></app-root>
-</body>
+      body * {
+        font-family: Scorecard-Averta, sans-serif, appleLogo;
+      }
 
+      .body-wrapper {
+        background-color: #fafafa;
+      }
+
+      @media print {
+        .body-wrapper {
+          background-color: #ffffff;
+        }
+      }
+    </style>
+    <script>
+      var __importDefault =
+        (this && this.__importDefault) ||
+        function(mod) {
+          return mod && mod.__esModule ? mod : { default: mod };
+        };
+    </script>
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#1976d2" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <app-root>
+      <div style="padding-top: 15%; text-align: center;">
+        <img src="assets/icons/balls-5.svg" alt="" />
+        <h4 style="margin-top: 50px;">
+          Discovering Interactive Maps Awesomeness
+        </h4>
+      </div>
+    </app-root>
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
+  </body>
 </html>
